--- a/templates/user_file/admin_images_list.html
+++ b/templates/user_file/admin_images_list.html
@@ -10,7 +10,7 @@
         {%- set n = n + 1 -%}
         <div class="col-xs-6 col-sm-6 col-md-4 col-lg-3">
             <div class="file ">
-                <a href="/{{ item.path }}" target="_blank">
+                <a href="/{{ item.path }}" class="gallery-item" data-gallery="">
                     <div class="image" style="background-image: url('/{{ item.path }}');"></div>
                     <div class="file-name">
                         <span class="file-name-span">{{ item.name }}
@@ -18,6 +18,15 @@
                         <small class="hidden-sm hidden-xs">上傳日期：{{ print_value(item.created) }}</small>
                     </div>
                 </a>
+            </div>
+            <div id="blueimp-gallery" class="blueimp-gallery blueimp-gallery-controls">
+                <div class="slides"></div>
+                <h3 class="title"></h3>
+                <a class="prev">‹</a>
+                <a class="next">›</a>
+                <a class="close">×</a>
+                <a class="play-pause"></a>
+                <ol class="indicator"></ol>
             </div>
         </div>
     {% endfor %}
