--- a/templates/user_file/admin_images_list.html
+++ b/templates/user_file/admin_images_list.html
@@ -4,11 +4,11 @@
 {% block layout_content %}
 {% set list = context[scaffolding.plural] %}
 <div class="wrapper wrapper-content">
-    <div class="row files-box">
+    <div class="row files-box" style="margin-left: 0">
     {%- set n = 0 -%}
     {% for item in list %}
         {%- set n = n + 1 -%}
-        <div class="col-xs-6 col-sm-6 col-md-4 col-lg-3">
+        <div class="col-xs-4 col-sm-4 col-md-4 col-lg-3 margin-0 padding-1">
             <div class="file ">
                 <a href="/{{ item.path }}" class="gallery-item" data-gallery="">
                     <div class="image" style="background-image: url('/{{ item.path }}');"></div>
